--- a/shop/src/main/webapp/WEB-INF/web.xml
+++ b/shop/src/main/webapp/WEB-INF/web.xml
@@ -16,21 +16,38 @@ xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/
   
   
   
-  <resource-ref>
+ <resource-ref>
 	<description>Connection</description>
 	<res-ref-name>jdbc/OracleDB</res-ref-name>
 	<res-type>javax.sql.DataSource</res-type>
 	<res-auth>Container</res-auth>
 </resource-ref>
 
+
 <servlet>
-	<servlet-name>MemberFrontController</servlet-name>
-	<servlet-class>member.action.MemberFrontController</servlet-class>
+	<servlet-name>ControllerUsingURI</servlet-name>
+	<servlet-class>controller.ControllerUsingURI</servlet-class>
+	 
+	 <init-param>
+  		<param-name>configFile</param-name>
+  		<param-value>/WEB-INF/commandHandlerURI.properties</param-value>
+  	</init-param>
+	
 </servlet>
 
 <servlet-mapping>
-	<servlet-name>MemberFrontController</servlet-name>
+	<servlet-name>ControllerUsingURI</servlet-name>
 	<url-pattern>*.me</url-pattern>
+</servlet-mapping>
+
+<servlet-mapping>
+	<servlet-name>ControllerUsingURI</servlet-name>
+	<url-pattern>*.ag</url-pattern>
+</servlet-mapping>
+
+<servlet-mapping>
+	<servlet-name>ControllerUsingURI</servlet-name>
+	<url-pattern>*.go</url-pattern>
 </servlet-mapping>
 
 
