--- a/shop/src/main/webapp/WEB-INF/commandHandlerURI.properties
+++ b/shop/src/main/webapp/WEB-INF/commandHandlerURI.properties
@@ -19,10 +19,16 @@
 /AdminGoodsAdd.ag=member.action.MemberChangeAction
 
 #Goods
-/Goods_detail.go=goods.action.GoodsDetailAction
+/Goods_Detail.go=goods.action.GoodsDetailAction
+
 /GoodsList.go=goods.action.GoodsListAction
 
 
+#order
+/OrderStart.or=order.action.OrderStartAction
+/OrderList.or=order.action.OrderListsAction
+/OrderAdd.or=order.action.OrderAddAction
+#/OrderOk.or
 
 
 
