--- a/shop/src/main/webapp/WEB-INF/web.xml
+++ b/shop/src/main/webapp/WEB-INF/web.xml
@@ -50,7 +50,15 @@ xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/
 	<url-pattern>*.go</url-pattern>
 </servlet-mapping>
 
+<servlet-mapping>
+	<servlet-name>ControllerUsingURI</servlet-name>
+	<url-pattern>*.ba</url-pattern>
+</servlet-mapping>
 
+<servlet-mapping>
+	<servlet-name>ControllerUsingURI</servlet-name>
+	<url-pattern>*.or</url-pattern>
+</servlet-mapping>
   
 </web-app>
 
