--- a/shop/src/main/webapp/WEB-INF/commandHandlerURI.properties
+++ b/shop/src/main/webapp/WEB-INF/commandHandlerURI.properties
@@ -1,3 +1,10 @@
+#adminorder
+/AdminOrderList.ao=adminorder.action.AdminOrderListsAction
+/AdminOrderDetail.ao=adminorder.action.AdminOrderDetailAction
+/AdminOrderModify.ao=adminorder.action.AdminOrderModifyAction
+/AdminOrderDelete.ao=adminorder.action.AdminOrderDeleteAction
+
+
 #member
 /MemberLoginAction.me=member.action.MemberLoginAction
 /MemberJoinAction.me=member.action.MemberJoinAction
@@ -15,12 +22,10 @@
 /AdminGoodsModify.ag=admin.action.AdminGoodsModifyForm
 /AdminGoodsModifyAction.ag=admin.action.AdminGoodsModifyAction
 /AdminGoodsDelete.ag=admin.action.AdminGoodsDeleteAction
-
 /AdminGoodsAdd.ag=member.action.MemberChangeAction
 
 #Goods
 /Goods_Detail.go=goods.action.GoodsDetailAction
-
 /GoodsList.go=goods.action.GoodsListAction
 
 
@@ -30,13 +35,12 @@
 /OrderAdd.or=order.action.OrderAddAction
 #/OrderOk.or
 
+#basket
+/BasketAdd.ba=basket.action.BasketAddAction
+/BasketList.ba=basket.action.BasketListsAction
+/BasketDelete.ba=basket.action.BasketDeleteAction
 
 
-
-
-
-
-#/MemberLogin.me=member.action.MemberMainAction
 
 
 #new=member.action.MemberJoinAction
