--- a/shop/src/main/webapp/WEB-INF/commandHandlerURI.properties
+++ b/shop/src/main/webapp/WEB-INF/commandHandlerURI.properties
@@ -23,17 +23,21 @@
 /AdminGoodsModifyAction.ag=admin.action.AdminGoodsModifyAction
 /AdminGoodsDelete.ag=admin.action.AdminGoodsDeleteAction
 /AdminGoodsAdd.ag=member.action.MemberChangeAction
+/AdminOrderList.ao=adminorder.action.AdminOrderListsAction
+
+
 
 #Goods
 /Goods_Detail.go=goods.action.GoodsDetailAction
 /GoodsList.go=goods.action.GoodsListAction
 
 
+
 #order
 /OrderStart.or=order.action.OrderStartAction
 /OrderList.or=order.action.OrderListsAction
 /OrderAdd.or=order.action.OrderAddAction
-#/OrderOk.or
+#/OrderOk.or=order.action.orderokjsp
 
 #basket
 /BasketAdd.ba=basket.action.BasketAddAction
