--- a/shop/src/main/webapp/WEB-INF/commandHandlerURI.properties
+++ b/shop/src/main/webapp/WEB-INF/commandHandlerURI.properties
@@ -6,6 +6,9 @@
 
 
 #member
+
+/MemberIdCheckAction.me=member.action.MemberIdCheckAction
+
 /MemberLoginAction.me=member.action.MemberLoginAction
 /MemberJoinAction.me=member.action.MemberJoinAction
 /MemberFindAction.me=member.action.MemberFindAction
